# modbuscore

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMMIT_MESSAGE_GATE23.txt  DEBUGGING_STEPS.md  DEBUG_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  Doxyfile  Doxyfile.in  GATE23_ISR_MODE_COMPLETE.md  Gemfile  KNOWN_ISSUES.md  Kconfig.modbus  LICENSE  Makefile  PHASE4_COMPLETE.md  QUICKSTART.md  QUICK_TEST_RTU.md  README.html  README.md  SUPPORT.md  Untitled document.docx  VERSIONING.md  conanfile.py  mkdocs.yml  rebuild.sh  requirements.txt  roadmap.md  update_plan.md  vcpkg.json
Testing/: modbus_cli_sanity.py
bak/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Kconfig.projbuild  Makefile  roadmap.md  update_plan.md
bak/examples/freertos_rtu_client/: CMakeLists.txt  main.c  modbus_tasks.h
bak/examples/win/client/uart/: CMakeLists.txt
bak/examples/zephyr_rtu_client/: CMakeLists.txt
bak/examples/zephyr_rtu_client/boards/: nrf52840dk_nrf52840.overlay
bak/modbus/: CMakeLists.txt  version_config.h.in
bak/modbus/include/modbus/: mb_embed.h  mb_power.h  mb_simple.h  modbus.h  profiles.h  transport.h
bak/modbus/include/modbus/internal/: client.h  mb_txpool.h  rtu_resync.h  server.h  transport.h  transport_core.h  transport_if.h  utils.h
bak/modbus/include/modbus/port/: freertos.h  mutex.h  posix.h
bak/modbus/include/modbus/transport/: ascii.h
bak/modbus/src/: client.c  core.c  frame.c  fsm.c  mapping.c  mb_client_convenience.c  mb_err.c  mb_host.c  mb_iovec.c  mb_power.c  mb_qos.c  rtu_resync.c  server.c  transport.c  utils.c
bak/modbus/src/compat/: libmodbus.c
bak/modbus/src/port/: bare.c  posix.c  win.c
bak/modbus/src/transport/ascii/: ascii.c
bak/modbus/src/transport/tcp/: tcp.c  tcp_multi.c
benchmarks/: CMakeLists.txt  bench_crc.c  bench_decode.c  bench_encode.c  bench_poll.c
benchmarks/baseline/: README.md  baseline_2025-10-08.json
cmake/: Config.cmake.in  GoogleTest-CMakeLists.txt.in  LibraryConfig.cmake  ModbusCoreConfig.cmake.in  SetEnv.cmake  modbus.pc.in  modbusConfig.cmake.in  modbuscore.pc.in
docs/: .buildinfo  CMAKE_PRESETS_GUIDE.md  COMPLETE_MIGRATION_PLAN.md  CONFIGURATION_PROFILES.md  FEATURE_COMPARISON.md  FOOTPRINT.md  FSM_COMPARISON.md  FSM_IMPROVEMENTS.md  FUZZING.md  Gemfile  README.md  (+48 more)
examples/: CMakeLists.txt  README.md  freertos_sim.c  loopback_demo.c  power_idle_demo.c  rtu_client.c  rtu_loop_demo.c  rtu_serial_client.c  rtu_server.c  tcp_client.c  tcp_client_cli.c  tcp_diagnostics.c  tcp_multi_client_demo.c  tcp_server.c  unit_test_loop_demo.c
examples/api-simple/: auto_cleanup.c
examples/bare_metal_rtu_client/: system_config.h
examples/cmake-consume/: CMakeLists.txt  main.c
examples/common/: demo_serial_port.h
examples/esp32_rtu_client/: CMakeLists.txt  README.md
examples/esp32_rtu_client/main/: main.c
examples/freertos_rtu_client/: FreeRTOSConfig.h  README.md
examples/level1_hello/: CMakeLists.txt  hello_rtu.c  hello_server.c  hello_write.c
examples/profile-demos/: README.md  simple_demo.c
examples/sync-basics/: main.c
examples/win/: CMakeLists.txt  client.c  main.c  tcp_windows.c  tcp_windows.h  uart_windows.c  uart_windows.h
examples/win/client/: CMakeLists.txt  main.c
examples/win/client/uart/: CMakeLists.txt  main.c
examples/win/server/: CMakeLists.txt  main.c
examples/win/server/tcp/: CMakeLists.txt  main.c
examples/win/server/uart/: CMakeLists.txt  main.c
examples/zephyr_rtu_client/: README.md  prj.conf
examples/zephyr_rtu_client/boards/: nucleo_f411re.overlay
examples/zephyr_rtu_client/src/: main.c
modbus/: CMakeLists.txt  fsm.c  fsm.h  helpers.c  helpers.h  modbus.c  modbus.h  modbus_client.c  modbus_client.h  modbus_server.c  modbus_server.h  version.h.in
modbus/include/modbus/: base.h  client.h  client_sync.h  conf.h  core.h  frame.h  fsm.h  log.h  mb_embed.h  mb_err.h  mb_host.h  mb_iovec.h  mb_isr.h  mb_log.h  mb_qos.h  mb_server_convenience.h  mb_txpool.h  mb_types.h  modbus.h  observe.h  pdu.h  ringbuf.h  server.h  transport.h  transport_if.h  utils.h
modbus/include/modbus/internal/: base.h  core.h  dup_filter.h  frame.h  mapping.h  mb_log.h  mb_queue.h  mb_simple_backend.h  mempool.h  observe.h  pdu.h  ringbuf.h
modbus/include/modbus/port/: bare.h  freertos.h  mutex.h  posix.h  win.h
modbus/include/modbus/transport/: ascii.h  rtu.h  tcp.h  tcp_multi.h
modbus/src/: client.c  client_sync.c  core.c  dup_filter.c  features.c  frame.c  fsm.c  log.c  mapping.c  mb_client_convenience.c  mb_err.c  mb_host.c  mb_iovec.c  mb_isr.c  mb_log.c  mb_power.c  mb_queue.c  mb_server_convenience.c  mb_simple.c  mb_txpool.c  mempool.c  observe.c  pdu.c  ringbuf.c  rtu_resync.c  server.c  transport.c  utils.c
modbus/src/compat/: libmodbus.c
modbus/src/port/: freertos.c  mutex.c  posix.c
modbus/src/transport/ascii/: ascii.c
modbus/src/transport/rtu/: rtu.c
modbus/src/transport/tcp/: tcp.c  tcp_multi.c
tests/: CMakeLists.txt  example_tcp_client_fc03.c  fault_inject.h  fsm.cpp  modbus_transport.c  run_integration_test.sh  run_test.py  simple_tcp_server.py  tcp_test_utils.h  test_autoheal.c  test_client_convenience.cpp  test_client_server_integration.cpp  test_client_sync.cpp  test_dup_filter.cpp  test_engine_diagnostics.c  test_engine_resilience.c  test_fsm.cpp  test_iovec_integration.cpp  test_mb_diag.cpp  test_mb_err.cpp  test_mb_iovec.cpp  test_mb_isr.cpp  test_mb_log.cpp  test_mb_power.cpp  test_mb_qos.cpp  test_mb_queue.cpp  test_mb_simple.cpp  test_mb_txpool.cpp  test_mempool.cpp  test_mock_transport.c  test_modbus_client.cpp  test_modbus_core.cpp  test_modbus_crc.cpp  test_modbus_server.cpp  test_modbus_transport.cpp  test_modbus_utils.cpp  test_pdu.c  test_pdu_codec.cpp  test_port_freertos.cpp  test_port_posix.cpp  (+16 more)
tests/fuzz/: CMakeLists.txt  MACOS_ISSUES.md  README.md  fuzz_mbap_decoder.c  fuzz_pdu_parser.c  fuzz_rtu_crc.c  pdu_decode_fuzz.cpp
tests/fuzz/corpus/: generate_corpus.c
tests/include/: engine_test_helpers.h
tests/test_fsm/: CMakeLists.txt  main.c
(+393 files in other folders)
